SpectrNET for Classification and Regression (QSO,QSO BAL). Data Loader --> 4.9 and 80k data. Dropout, LR Reduce plateau and Batch Norm.

--- a/Noteboooks/SpectraNET_R.ipynb
+++ b/Noteboooks/SpectraNET_R.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
        "35"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -387,7 +387,7 @@
        "\"\\nfor i in range(100):\\n    x=np.linspace(300,1000,443)\\n    print('Redshift:{}'.format(y[i]))\\n    plt.plot(x,X[i,:])\\n    plt.xlabel('Wavelength')\\n    plt.ylabel('Renormalized Flux [Arb unix]')\\n    plt.show()\\n    \\n\""
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {
     "tags": [
      "SpectraNET",
@@ -455,9 +455,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -476,6 +476,71 @@
       "  (fc3): Linear(in_features=16, out_features=1, bias=True)\n",
       "  (dropout): Dropout(p=0.5)\n",
       ")\n",
+      "0\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "1\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "2\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "3\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "4\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
+      "torch.Size([50, 1])\n",
       "Finished Training\n"
      ]
     }
@@ -510,13 +575,13 @@
     "        optimizer.zero_grad()\n",
     "        \n",
     "        output = net_R(data)\n",
+    "        print(output.shape)\n",
     "        loss = loss_func(output, target)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "        \n",
     "        running_loss = loss.item()\n",
     "        loss_.append(running_loss)\n",
-    "        f.write('Batch: {} <--> Loss: {} \\n'.format(batch_idx+1,running_loss))\n",
     "        #if(batch_idx !=0):    # print every 2000 mini-batches\n",
     "            #print('[%d, %5d] loss: %.3f' %(epoch + 1, i + 1, running_loss / 1000))\n",
     "            #running_loss = 0.0\n",
@@ -526,6 +591,7 @@
     "# Training loop\n",
     "for i in range(epoc):\n",
     "    f.write('Epoc: {}'.format(i+1))\n",
+    "    print(i)\n",
     "    train(i)\n",
     "    \n",
     "    \n",
