SpectrNET for Classification and Regression (QSO,QSO BAL). Data Loader --> 5.0 and 80k data. Dropout, LR Reduce plateau and Batch Norm.

--- a/Noteboooks/Weekly_Reports_CNN-Copy1.ipynb
+++ b/Noteboooks/Weekly_Reports_CNN-Copy1.ipynb
@@ -23,6 +23,7 @@
     "from astropy.io import fits\n",
     "import numpy as np\n",
     "import matplotlib.pylab as plt\n",
+    "import fitsio\n",
     "import pandas as pd\n",
     "from astropy.table import Table"
    ]
@@ -30,6 +31,32 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filename: data_dr12.fits\n",
+      "No.    Name      Ver    Type      Cards   Dimensions   Format\n",
+      "  0  PRIMARY       1 PrimaryHDU       8   (886, 639464)   float64   \n",
+      "  1                1 BinTableHDU     16   639464R x 4C   [J, J, J, J]   \n"
+     ]
+    }
+   ],
+   "source": [
+    "hdul = fits.open('data_dr12.fits') # Open file\n",
+    "info=hdul.info() # File info\n",
+    "#columns=hdul[1].columns # File Columns \n",
+    "#print(info,'/n',columns)\n",
+    "#data=hdul[0].read()# Database of spectra with human-expert classifications\n",
+    "#data=hdul[1]\n",
+    "#print(data[0].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
