SpectrNET for Classification. Regression (QSO). Data Loader --> 5.2 and 80k data. Dropout, LR Reduce plateau and Batch Norm.

--- a/Noteboooks/Weekly_Reports_CNN-Copy1.ipynb
+++ b/Noteboooks/Weekly_Reports_CNN-Copy1.ipynb
@@ -15,9 +15,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filename: Superset_DR12Q.fits\n",
+      "No.    Name      Ver    Type      Cards   Dimensions   Format\n",
+      "  0  PRIMARY       1 PrimaryHDU      16   (3111,)   uint8   \n",
+      "  1  Superset_DR12Q_v2_6.fits    1 BinTableHDU    104   546856R x 23C   [18A, D, D, J, J, J, J, D, E, E, J, J, J, I, K, K, K, K, 5E, 5E, 5E, 5E, 5E]   \n",
+      "None /n ColDefs(\n",
+      "    name = 'SDSS_NAME'; format = '18A'; unit = '-'\n",
+      "    name = 'RA'; format = 'D'; unit = 'deg'\n",
+      "    name = 'DEC'; format = 'D'; unit = 'deg'\n",
+      "    name = 'THING_ID'; format = 'J'; unit = '-'\n",
+      "    name = 'PLATE'; format = 'J'; unit = '-'\n",
+      "    name = 'MJD'; format = 'J'; unit = '-'\n",
+      "    name = 'FIBERID'; format = 'J'; unit = '-'\n",
+      "    name = 'Z_VI'; format = 'D'; unit = '-'\n",
+      "    name = 'Z_PIPE'; format = 'E'; unit = '-'\n",
+      "    name = 'ERR_ZPIPE'; format = 'E'; unit = '-'\n",
+      "    name = 'ZWARNING'; format = 'J'; unit = '-'\n",
+      "    name = 'CLASS_PERSON'; format = 'J'; unit = '-'\n",
+      "    name = 'Z_CONF_PERSON'; format = 'J'; unit = '-'\n",
+      "    name = 'SDSS_MORPHO'; format = 'I'; unit = '-'\n",
+      "    name = 'BOSS_TARGET1'; format = 'K'; unit = '-'\n",
+      "    name = 'ANCILLARY_TARGET1'; format = 'K'; unit = '-'\n",
+      "    name = 'ANCILLARY_TARGET2'; format = 'K'; unit = '-'\n",
+      "    name = 'EBOSS_TARGET0'; format = 'K'; unit = '-'\n",
+      "    name = 'PSFFLUX'; format = '5E'; unit = 'nanomaggies'\n",
+      "    name = 'IVAR_PSFFLUX'; format = '5E'; unit = '-'\n",
+      "    name = 'PSFMAG'; format = '5E'; unit = '-'\n",
+      "    name = 'ERR_PSFMAG'; format = '5E'; unit = '-'\n",
+      "    name = 'EXTINCTION'; format = '5E'; unit = '-'\n",
+      ")\n",
+      "534903 414337\n"
+     ]
+    }
+   ],
    "source": [
     "#Packages\n",
     "from astropy.io import fits\n",
@@ -25,33 +62,32 @@
     "import matplotlib.pylab as plt\n",
     "import fitsio\n",
     "import pandas as pd\n",
-    "from astropy.table import Table"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Filename: data_dr12.fits\n",
-      "No.    Name      Ver    Type      Cards   Dimensions   Format\n",
-      "  0  PRIMARY       1 PrimaryHDU       8   (886, 639464)   float64   \n",
-      "  1                1 BinTableHDU     16   639464R x 4C   [J, J, J, J]   \n"
-     ]
-    }
-   ],
-   "source": [
-    "hdul = fits.open('data_dr12.fits') # Open file\n",
+    "from astropy.table import Table\n",
+    "\n",
+    "# Reading data from truth_DR12Q.fits. This file have the database sample of spectra with human-expert classifitacion\n",
+    "\n",
+    "hdul = fits.open('Superset_DR12Q.fits') # Open file\n",
     "info=hdul.info() # File info\n",
-    "#columns=hdul[1].columns # File Columns \n",
-    "#print(info,'/n',columns)\n",
-    "#data=hdul[0].read()# Database of spectra with human-expert classifications\n",
-    "#data=hdul[1]\n",
-    "#print(data[0].shape)"
+    "columns=hdul[1].columns # File Columns \n",
+    "print(info,'/n',columns)\n",
+    "data=hdul[1].data # Database of spectra with human-expert classifications \n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "i=data['ANCILLARY_TARGET1']\n",
+    "i2=data['ANCILLARY_TARGET2']\n",
+    "\n",
+    "ic=0\n",
+    "ic2=0\n",
+    "for j in range(i.shape[0]):\n",
+    "    if(i[j]==0):\n",
+    "        ic+=1\n",
+    "    if(i2[j]==0):\n",
+    "        ic2+=1    \n",
+    "\n",
+    "print(ic,ic2)\n",
+    "\"\"\"\n",
+    "\n"
    ]
   },
   {
@@ -141,7 +177,7 @@
     "data2=hdul_2[1].data # Database of spectra\n",
     "spectra=hdul_2[0].data # Spectrum of each object \n",
     "\n",
-    "\n",
+    "\"\"\"\n",
     "# The Spectra in this database have three main parameters: Plate ID, The modified julian day and fiber ID of the observation.\n",
     "# Let's take a look of the first spectrum.\n",
     "x=np.linspace(360,1000,443) # I cut the sample to 443 pixels in spaced log-wavelength.  \n",
@@ -171,7 +207,8 @@
     "da=np.intersect1d(data2['TARGETID'],data['THING_ID'])\n",
     "print(da.shape)\n",
     "\n",
-    "# So, in orden to make a correlation betwen identified object and spectrum we need to use all three parameters (Plate ID, MJD, FiberID)"
+    "# So, in orden to make a correlation betwen identified object and spectrum we need to use all three parameters (Plate ID, MJD, FiberID)\n",
+    "\"\"\""
    ]
   },
   {
@@ -311,24 +348,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I find 537677 objects with spectra from DR12\n",
-      "[17792 17931 17610 ... 457655 459274 457504] [25 26 29 ... 639461 639462 639463]\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {
     "scrolled": false
@@ -460,7 +479,7 @@
     "qsos=obj.loc[obj['CLASS_PERSON']==3]\n",
     "qsos_bal=obj.loc[obj['CLASS_PERSON']==30]\n",
     "\n",
-    "N_sample=30000\n",
+    "N_sample=100\n",
     "epoc=10\n",
     "batch_size=int(N_sample/epoc)\n",
     "\n",
@@ -523,10 +542,10 @@
     "    j=j+1    \n",
     "    \n",
     "spectra_=pd.DataFrame(spectra_)\n",
-    "X=spectra_.replace(-np.inf,0)\n",
+    "#X=spectra_.replace(-np.inf,0)\n",
     "\n",
     "\n",
-    "X=X.values\n",
+    "X=spectra_.values\n",
     "\n",
     "y=sample_objects['CLASS_PERSON']\n",
     "y=y.replace([1, 4, 3, 30], [0,1,2,3]).values\n",
